2009-07-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spintrcritical06/init.c: Test now hits forward and reverse cases.

2009-07-22	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spintrcritical09/init.c, spintrcritical09/spintrcritical09.scn: Make
	test work for case that it is documented to handle.

2009-07-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spintrcritical10/.cvsignore, spintrcritical10/Makefile.am,
	spintrcritical10/init.c, spintrcritical10/spintrcritical10.doc,
	spintrcritical10/spintrcritical10.scn: New files.

2009-07-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac, sp39/init.c, sp39/sp39.scn: Move
	unreliable third case in sp39 to spintrcritical10. New tests to hit
	other event synchronization critical sections.
	* spintrcritical11/.cvsignore, spintrcritical11/Makefile.am,
	spintrcritical11/init.c, spintrcritical11/spintrcritical11.doc,
	spintrcritical11/spintrcritical11.scn, spintrcritical12/.cvsignore,
	spintrcritical12/Makefile.am, spintrcritical12/spintrcritical12.doc,
	spintrcritical12/spintrcritical12.scn: New files.

2009-07-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, configure.ac: Add new test to exercise Debug Manager.
	* sp10/.cvsignore, sp10/Makefile.am, sp10/init.c, sp10/sp10.doc,
	sp10/sp10.scn: New files.

2009-07-21	Joel Sherrill <joel.sherrill@OARcorp.com>

	* spintrcritical06/init.c: Clean up.
	* spintrcritical09/init.c: Adjust clock tick so it works on erc32.
	* spintrcritical09/spintrcritical09.scn: Fill in.

2009-07-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* spintrcritical06/init.c: Add comment to indicate test is not finished
	and known to not hit the case.
	* Makefile.am, configure.ac: Add a couple more interrupt critical
	section tests.
	* spintrcritical08/.cvsignore, spintrcritical08/Makefile.am,
	spintrcritical08/init.c, spintrcritical08/spintrcritical08.doc,
	spintrcritical08/spintrcritical08.scn, spintrcritical09/.cvsignore,