@@ -79,7 +79,8 @@ rtems_task Init(
   if ( case_hit ) {
     puts( "Init - It appears the case has been hit" );
     puts( "*** END OF TEST INTERRUPT CRITICAL SECTION 08 ***" );
-  }
+  } else 
+    puts( "Init - Case not hit - ran too long" );
   rtems_test_exit(0);
 }
 
